# geometry.martincastroalvarez.com

./: .coverage  .coveragerc  .gitignore  .npmrc  LICENSE  README.md  app.ts  cdk.json  outputs.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  spy.sh  tailwind.config.cjs  tsconfig.cdk.json  tsconfig.react.json  turbo.json  vite.config.js  vitest.config.js
api/: README.md  __init__.py  api.py  attributes.py  controllers.py  data.py  enums.py  exceptions.py  indexes.py  interfaces.py  logger.py  messages.py  models.py  mutations.py  queries.py  repositories.py  requirements.txt  serializers.py  settings.py  states.py  steps.py  structs.py  tasks.py  validations.py  validators.py  workers.py
lab/: README.md  art.py  box.py  consortium.py  convex.py  designer.py  drawable.py  element.py  example1.py  example10.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py  example8.py  example9.py  exceptions.py  guard.py  interval.py  matrix.py  model.py  obstacle.py  path.py  point.py  polygon.py  pyproject.toml  segment.py  serializable.py  triangle.py  visibility.py
tests/: __init__.py  conftest.py  test_api.py  test_attributes.py  test_data.py  test_ears.py  test_enums.py  test_example1.py  test_example2.py  test_example3.py  test_example5.py  test_example8.py  test_exceptions.py  test_geometry.py  test_indexes.py  test_interfaces.py  test_logger.py  test_messages.py  test_models.py  test_mutations.py  test_polygon_a.py  test_polygon_batman.py  test_polygon_boxes.py  test_polygon_cross.py  test_polygon_example1.py  (+36 more)
(+171 files in other folders)
