[project]
name = "geometry-martincastroalvarez-com"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf (>=6.6.0,<7.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "colorama (>=0.4.6,<1.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "types-colorama (>=0.4.15.20250801,<0.5.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
